[REFACTOR] : Add filter by dates on activity logs
[REFACTOR] : Update page codename to allow codenames of 100 characters
[REFACTOR] : Add thumbnail to field google coordinates in modules admin
[REFACTOR] : Update tag atm-xml to be used in rows and in page templates
[REFACTOR] : Images and files inserted into polymod fields now use correct website domain instead of main website domain
[FEATURE] : Add oembed object and oembed polymod field (external media field). Update Mediacenter to manage oembed medias
[FEATURE] : Add parent page selection on new page creation
[FEATURE] : Add variable type {page:father:XXX} to get infos from current parent page
[FEATURE] : Add protection for pages and categories to avoid changing important datas inadvertently
[FEATURE] : Add {server:XXX:YYY} variable type
[FEATURE] : Add atm-header tag to create content to be executed before page content
[FEATURE] : Add atm-redirect tag to create a redirection from one page to another one
[FEATURE] : Add HTTPS option for individual pages

V4.1.4 (in progress)
[BUG] : Correct bugs numbers: 2070 (see http://www.automne-cms.org/bug/)
[BUG] : Correct bug for better handling of HTTPS websites and cross HTTP and HTTPS websites on the same Automne
[BUG] : Correct bug with external home page redirection
[BUG] : Correct bug with tags which only contain character zero

V4.1.3 (02/05/2011)
[BUG] : Correct bugs numbers: 1860, 2021, 2024, 2032, 2039, 2040, 2043, 2044 (see http://www.automne-cms.org/bug/)
[BUG] : Correct a bug with atm-search-param tag when search type is item and value is block
[BUG] : Users can set categories or pages rights above their own. They can also set grups denied even if they do not have rights for it.
[BUG] : Secondary resources are deleted with the attached primary resource
[BUG] : Correct some minors bugs in module import
[REFACTOR] : Refactor daily routine to add a check on server parameters page
[REFACTOR] : Add some details on polymod rows help